--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/hanhan0303/hanhowlife",
+  "homepage": "https://hanhan0303.github.io/hanhowlife",
   "name": "react-final",
   "version": "0.1.0",
   "private": true,
